[project]
name = "zoran-semantique-crypto"
version = "0.1.0"
description = "Cryptage sémantique (prototype): ondelettes sémantiques & qubits de sens."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["zoran", "mimetic-ai", "semantic-crypto"]
license = {text = "MIT"}

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
zsc = "zsc.core:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
